// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`setMeasuresToSecondaryAxis > should  add measures to secondary axis when dualAxis=true 1`] = `
{
  "dualAxis": true,
  "secondary_yaxis": {
    "measures": [
      "m_acugFHNJgsBy",
    ],
    "rotation": "90",
  },
  "type": "combo2",
}
`;

exports[`setMeasuresToSecondaryAxis > should  add measures to secondary axis when dualAxis=undefined 1`] = `
{
  "dualAxis": undefined,
  "secondary_yaxis": {
    "measures": [
      "m_acugFHNJgsBy",
    ],
    "rotation": "90",
  },
  "type": "combo2",
}
`;
